# hexapod

./: .gitignore  README.md  bildros  clear_ros  sor  sync_rpi.sh
src/hex_control/: package.xml  setup.cfg  setup.py
src/hex_control/hex_control/: dummy_joint_state_publisher.py  dummy_path_publisher.py  executor.py  executor_old.py  path_proxy.py  servo_test.py  spi_bridge.py  spi_config.sh  trajectory_encoder.py  trajectory_generator.py  trajectory_point.py  transformations_utils.py  tripod_inverse_kinematics.py
src/hex_description/: CMakeLists.txt  package.xml
src/hex_description/launch/: executor.launch.py  show.launch.py
src/hex_description/models/: hex_description.json  hex_model.xacro
src/hex_description/rviz/: show.rviz.template
src/line_detection/: package.xml  setup.cfg  setup.py
src/line_detection/line_detection/: calib.ipynb  camera_calibration.py  line_detector.py  sparser.py  tuning.ipynb
